# openmscg

./: .gitignore  MANIFEST.in  Pair_SL-SL.table  README.md  build.cfg  meta.yaml  pytest.ini  requirements.txt  result.txt  setup.cfg  setup.py
arch/: build.cfg.linux-gcc-linpack  build.cfg.linux-intel-mkl
cg/: __init__.py  bondlist.py  bspline.py  matrix.py  pairlist.py  timer.py  top_cg.py  topology.py  trajectory.py  verbose.py
cg/cli/: cgfm.py  cgib.py  cginfo.py
cg/tables/: __init__.py  angle_bspline.py  bond_bspline.py  pair_bspline.py
docs/: .gitignore  Makefile  README.md  cli.cgib.md  make.bat
docs/source/: 404.rst  basics.rst  cgtop.rst  cli.rst  commands.rst  conf.py  contribute.rst  index.rst  intro.rst  module.rst  modules.rst  mscgbackmapping.rst  (+5 more)
examples/: .gitignore  README.md
mscg/: .gitignore  __init__.py  bondlist.py  bspline.py  checkpoint.py  cli_parser.py  force.py  mapper.py  mass.py  pairlist.py  pdb.py  sd.py  table.py  timer.py  top_cg.py  top_lammps.py  topology.py  traj_reader.py  trajectory.py  verbose.py
tests/: .gitignore  README.md  conftest.py  test_4s.py  test_base.py  test_bondlist.py  test_cgderiv_dimer.py  test_cgderiv_toy3b.py  test_cgderiv_water.py  test_cged.py  test_cgfm_4s.py  test_cgfm_lj_liquid.py  test_cgfm_methanol.py  test_cgfm_power_fluid.py  test_cghenm.py  test_cgib_methanol.py  test_cgmap_methanol.py  test_cgrem_water.py  test_lj_liquid.py  test_lj_liquid_1s.py  test_methanol.py  test_methanol_1s.py  test_pairlist.py  test_power_fluid.py  test_topology.py  test_trajectory.py  test_ucgfm_methanol.py
(+284 files in other folders)
