[metadata]
name         = opencg
author       = The Voth Research Group, The University of Chicago
author_email = yuxing@uchicago.edu
license      = GPL
url          = https://software.uchicago.edu/mscg/
platforms    = linux/x86_64
description  = An open-source package for multi-scale coarse-graining (MSCG) modeling in computational chemistry and biology
long_description = This software integrates the cutting-edge CG and UCG model generation/simulation algorithms from The Voth Group and provide a user-driven code/data repository for public dissemination of CG/UCG models and parameters. The development is funded by NSF/SSE (No.5-27425), and focused on the broad applicability to the fields of chemistry, biology and the materials sciences in accordance with the National Strategic Supercomputing Initiative (e.g. Principle 1, Objective 2), and the Vision and Strategy for Software for Science, Engineering, and Education (NSF 12-113, Strategies 1-4).
